@@ -27,7 +27,7 @@ fake_home = 1       ; fakes $ENV{HOME} just in case
 [MetaTests]         ; xt/release/meta-yaml.t
 [PodSyntaxTests]    ; xt/release/pod-syntax.t
 [PodCoverageTests]  ; xt/release/pod-coverage.t
-[PortabilityTests]  ; xt/release/portability.t (of file name)
+;[PortabilityTests]  ; xt/release/portability.t (of file name)
 [Test::Version]     ; xt/release/test-version.t
 
 [CriticTests]       ; xt/author/critic.t
@@ -37,6 +37,7 @@ critic_config = perlcritic.ini
 spell_cmd = aspell list
 stopwords = PASSed
 stopwords = VCS
+stopwords = repos
 
 ; metadata
 [AutoPrereqs]       ; find prereqs from code
