@@ -2,6 +2,10 @@
 
     Now requires Pinto 0.23, which has a different interface.
 
+    Refactored internals so they could be tested.
+
+    And then I actually wrote the tests!
+
 0.019     2011-08-30 01:14:43 America/Los_Angeles
 
     Now requires Pinto 0.021, which behaves better in a 
